--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
             padding: 20px;
         }
 
-        h1, h2 {
+        h1 {
+            color: #005f73;
+            text-align: center;
+            font-size: 40px;
+            text-transform: uppercase;
+            text-shadow: 2px 2px 4px #000000;
+        }
+
+        h2 {
             color: #333;
+            margin-top: 20px;
         }
 
         #car-rental-interface {
@@ -21,6 +30,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
         }
 
         button {
